Fixed menu visiblity for large screens

--- a/src/components/Navbar/navbar.scss
+++ b/src/components/Navbar/navbar.scss
@@ -40,6 +40,10 @@
       display: none;
     }
   }
+
+  .nav-mobile {
+    display: none;
+  }
 }
 
 @media (max-width: 360px) {
@@ -58,6 +62,7 @@
     }
 
     .nav-mobile {
+      display: block;
       position: absolute;
       top: 60px;
       left: 52px;
